[fix] Add new blog

--- a/home/templates/add_blog.html
+++ b/home/templates/add_blog.html
@@ -7,7 +7,8 @@
 
     <a href="{% url 'see_blog' %}" class="btn btn-warning">View Your blogs</a>
 
-    <form method="post" class="mt-5 pt-5 mb-5 pb-5" enctype="multipart/form-data">
+    <form method="post" class="mt-5 pt-5 mb-5 pb-5"
+          enctype="multipart/form-data" action="{% url 'add_blog' %}">
         {% csrf_token %}
         <div class="row">
             <div class="col-md-12">
@@ -21,9 +22,8 @@
             </div>
 
             <div class="col-md-12">
-
                 <input type="file" name="image" class="form-control" >
-                </div>
+            </div>
 
         </div>
 
